--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"mongodb": "1.2.7",
 		"moment" : "1.7.2",
 		"emailjs": "0.3.3"
+		"formidable": "1.0.15"
 	},
 	"engines": {
 		"node": "0.8.14",
